pointing to coellomontiel repos

--- a/custom_components/smartir/manifest.json
+++ b/custom_components/smartir/manifest.json
@@ -1,9 +1,9 @@
 {
   "domain": "smartir",
   "name": "SmartIR",
-  "documentation": "https://github.com/smartHomeHub/SmartIR",
+  "documentation": "https://github.com/coellomontiel/SmartIR",
   "dependencies": [],
-  "codeowners": ["@smartHomeHub"],
+  "codeowners": ["@coellomontiel"],
   "requirements": ["aiofiles>=0.6.0"],
   "homeassistant": "2023.6.0",
   "version": "1.17.8",
